<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">The Blood Donor</string>
    <string name="str_content_desc_profile_picture">Profile Picture</string>
    <string name="str_btn_save">Save</string>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="blood_type_array">
        <item>O-ve</item>
        <item>O+ve</item>
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B-ve</item>
        <item>B+ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
    </string-array>

    <string name="str_item_show_profile">Show Profile</string>
    <string name="str_item_signout">Sign Out</string>
    <string name="str_tab_my_donations">My Donations</string>
    <string name="str_tab_requested_donations">My Requests</string>
    <string name="str_tab_new_donations">All Requests</string>

    <string name="str_dialog_submit_new_request">Submit Request</string>
    <string name="str_dialog_complete_request">Complete Request</string>
    <string name="str_dialog_cancel_request">Cancel</string>

    <string name="empty_view_title_text_new_donation">No donation requests &#8230;</string>
    <string name="empty_view_title_text_donation_requests">You never requested any donations &#8230;</string>
    <string name="empty_view_title_text_my_donation">You never made any donations &#8230;</string>

    <string name="empty_view_subtitle_text">Get started by creating a new donation request</string>
    <string name="empty_view_subtitle_text_my_donation" tools:keep="@string/empty_view_subtitle_text_my_donation">Get started from the New Donations TAB</string>

    <string name="str_send_button_label">Send</string>
    <string name="str_profile_image_content_desc">Profile Image</string>
    <string name="str_requested_on_label">On:</string>
    <string name="str_donated_by_label">Donated By:</string>
    <string name="str_location_label">Location</string>
    <string name="str_requested_by_label">By:</string>
    <string name="str_zip_code_hint">Zip Code</string>
    <string name="str_country_hint">Country</string>
    <string name="str_state_name_hint">State Name</string>
    <string name="str_city_name_hint">City Name</string>
    <string name="str_no_data">No data</string>
    <string name="content_description_approval_button">approval button</string>
    <string name="str_donors_responded_label">Donors Responded:</string>
    <string name="str_default_country_name">USA</string>
    <string name="str_content_description_fab_button">Create a new donation request.</string>
    <string name="str_content_description_send_message_button">Send message</string>
    <string name="str_content_description_save_profile_information">Save profile information</string>
    <string name="str_snackbar_issue_in_sending_message">Issue while sending the message.</string>
    <string name="str_alertdialog_title">Complete Donation Request</string>
    <string name="str_alert_dialog_message">will be the donor for your requested blood type.</string>
    <string name="str_snackbar_issue_completing_request">Issue while completing the request</string>
    <string name="str_snackbar_completed_request">Completed request successfully</string>
    <string name="str_alertdialog_title_donation_request">Select blood type for new donation request.</string>
    <string name="str_snackbar_submitting_request">Issue while submitting the request</string>
    <string name="str_snackbar_completed_request_sucessfully">Submitted request for</string>
    <string name="str_toast_message_user_input_validation">Please fill the listed information,</string>
    <string name="str_requested_on_widget">Requested on:</string>
    <string name="str_donor_responses_widget">Donor Responses:</string>
    <string name="str_network_connection_not_available">No network connection available to fetch donation data.</string>
    <string name="str_no_connection_alert_title">Network Connection Unavailable</string>
    <string name="str_toast_zip_code">Zip code</string>
    <string name="str_toast_city">City</string>
    <string name="str_toast_state">State</string>
    <string name="str_country_toast">Country</string>
    <string name="str_toast_gender">Gender</string>
    <string name="str_toast_blood_type">Blood type</string>


</resources>
