<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.mvnshrikanth.theblooddonor.ui.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_items"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:contentDescription="@string/str_content_desc_profile_picture"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            tools:text="Shrikanth Malarouth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_items"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_blood_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_items"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/str_city_name_hint" />

            <EditText
                android:id="@+id/editText_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/str_state_name_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_items"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/str_country_hint" />

            <EditText
                android:id="@+id/editText_zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/str_zip_code_hint"
                android:inputType="number"
                android:maxLength="5" />

        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/str_content_description_save_profile_information"
            android:text="@string/str_btn_save" />
    </LinearLayout>
</ScrollView>