<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.mvnshrikanth.theblooddonor.ui.MyDonationRequestsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_My_Donation_Requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_request_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_fab_button"
        android:contentDescription="@string/str_content_description_fab_button"
        android:src="@drawable/blood_icon"
        app:backgroundTint="@android:color/white"
        app:fabSize="auto"
        app:layout_anchor="@id/recyclerView_My_Donation_Requests"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/blood_icon" />

    <RelativeLayout
        android:id="@+id/empty_my_donation_request_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/empty_blood_drop_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/blood_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_blood_drop_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/empty_view_title_text_donation_requests"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0" />
    </RelativeLayout>

</FrameLayout>
