<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_requested_blood_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="A+ve" />

        <View
            android:id="@+id/view_greyline"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_requested_blood_group"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_donated_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/str_requested_on_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_greyline"
            app:layout_constraintTop_toBottomOf="@+id/textView_requested_by_name_label" />


        <TextView
            android:id="@+id/textView_requested_by_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/str_requested_by_label"
            app:layout_constraintStart_toEndOf="@+id/view_greyline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/str_location_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_greyline"
            app:layout_constraintTop_toBottomOf="@+id/textView_donated_date_label" />

        <TextView
            android:id="@+id/textView_requested_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_donated_date_label"
            app:layout_constraintTop_toBottomOf="@+id/textView_requested_by"
            tools:text="21-Dec-2017" />

        <TextView
            android:id="@+id/textView_requested_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_requested_by_name_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Shrikanth Malarouth" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_location_label"
            app:layout_constraintTop_toBottomOf="@+id/textView_requested_date"
            tools:text="East Windsor, CT" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
